# immortal

./: .travis.yml  CHANGELOG.md  README.md  immortal.cabal  stack.yaml
src/Control/: Immortal.hs
src/System/: Immortal.hs
tests/: test.hs
