name:                immortal
version:             0.2.2.1
synopsis:            Spawn threads that never die (unless told to do so)
description:         A small library to create threads that never die.

                     This is useful e.g. for writing servers.

homepage:            https://github.com/feuerbach/immortal
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka
maintainer:          roma@ro-che.info
-- copyright:
category:            Concurrency
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/feuerbach/immortal.git

library
  exposed-modules:     Control.Immortal
  build-depends:
    base >=4.5 && <5,
    stm,
    unliftio-core >=0.1.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4 && < 5
    , tasty >= 0.8
    , tasty-hunit
    , transformers
    , immortal
    , stm
  ghc-options: -Wall
